--- a/index.html
+++ b/index.html
@@ -4,26 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>AI Festival</title>
 </head>
 <body>
     <!--Navbar-->
-    <section>Navbar goes here</section>
+    <section>
+        <div id="navbar">
+            <div id="navlink">
+                <ul>
+                    <li><a class="active" href="#home">Home</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Blog</a></li>
+                </ul>
+            </div>
+            <div id="iconImage">
+                <img src="./assets/images/AI image.jpg" alt="logo">
+            </div>
+            <div id="subscribeIcon">
+                <img src="./assets/images/t.svg">
+                <img src="./assets/images/f.svg">
+                <img src="./assets/images/b.svg" id="ball">
+                <button id="get-in-touch">GET IN TOUCH</button>
+            </div>
+        </div>
+        <div id="main">
+            <div id="sub-main">
+                <div id="sub-main-details">
+                    <div>The Largest AI</div>
+                    <div>conference in</div>
+                    <div>Nigeria</div>
+                    <div id="sub-main-details-small">April 16-18, 2020</div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!--Introduction-->
-    <section>Introduction goes here</section>
+    <section></section>
 
     <!-- What Goes On -->
-    <section>What Goes On goes here</section>
+    <section></section>
 
     <!-- Automation -->
-    <section> Automation goes here</section>
+    <section> </section>
 
     <!-- Call for Exhibition -->
-    <section> Call for Exhibition goes here</section>
+    <section> </section>
 
     <!--Footer-->
-    <section> Footer goes here</section>
+    <section></section>
 </body>
+<script src="script.js"></script>
 </html>
