--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
             <div id="navlink">
                 <ul>
                     <li><a class="active" href="#home">Home</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Blog</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Blog</a></li>
                 </ul>
             </div>
             <div id="iconImage">
                 <img src="./assets/images/AI image.jpg" alt="logo">
             </div>
             <div id="subscribeIcon">
-                <img src="./assets/images/t.svg">
+                <a href = "twittter.com/Nigeriaai">img src="./assets/images/t.svg"></a>
                 <img src="./assets/images/f.svg">
-                <img src="./assets/images/b.svg" id="ball">
                 <button id="get-in-touch">GET IN TOUCH</button>
             </div>
         </div>
