--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="./assets/images/AI image.jpg" alt="logo">
             </div>
             <div id="subscribeIcon">
-                <a href = "twittter.com/Nigeriaai">img src="./assets/images/t.svg"></a>
+                <a href = "twittter.com/Nigeriaai"><img src="./assets/images/t.svg"></a>
                 <img src="./assets/images/f.svg">
                 <button id="get-in-touch">GET IN TOUCH</button>
             </div>
