--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                 <a href="https://twitter.com/Nigeriaai"> 
                     <img src="./assets/images/t.svg">
                 </a>
+                <a href="https://facebook.com/aifestivalnigeria">
                 <img src="./assets/images/f.svg">
+                </a>
+                <a href="mailto:aifestivalng@gmail.com">
                 <button id="get-in-touch">GET IN TOUCH</button>
             </div>
         </div>
