added the What Goes On Section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <title>AI Festival</title>
+    <style>
+        .card-img-top{
+            height: 50px;
+            width: 50px;
+            margin: 10px auto 10px auto;
+        }
+
+        .card-img-top1{
+            height: 30px;
+            width: 30px;
+            margin: 5px;
+            color: #0C185C;
+        }
+
+        .card-body{
+            text-align: center;
+        }
+
+        .what-goes-on{
+            margin-left: 40px;
+        }
+    </style>
 </head>
+
 <body>
     <!--Navbar-->
     <section>Navbar goes here</section>
@@ -15,7 +41,55 @@
     <section>Introduction goes here</section>
 
     <!-- What Goes On -->
-    <section>What Goes On goes here</section>
+
+    <section>
+     <div class="container-fluid">
+        <div class="col">
+
+            <img src="assets/img/dots-menu.png" class="card-img-top1" alt="dots-menu">
+            <h1 class="what-goes-on">WHAT <br />GOES ON</h1>
+        </div>
+        <div class="row row-cols-1 row-cols-md-3">
+            <div class="col mb-4">
+                <div class="card h-100">
+                    <img src="assets/img/dots-menu.png" class="card-img-top1" alt="dots-menu">
+                    <img src="assets/img/speech.png" class="card-img-top" alt="TALKS AND WORKSHOP">
+                    <div class="card-body">
+                        <h5 class="card-title">TALKS AND WORKSHOP</h5>
+                        <p class="card-text">A workshop is embedded into a conference; it doesn’t take place on its own, but it takes place
+                            during the main
+                            conference.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col mb-4">
+                <div class="card h-100">
+                    <img src="assets/img/dots-menu.png" class="card-img-top1" alt="dots-menu">
+                    <img src="assets/img/domra.png" class="card-img-top" alt="MUSIC">
+                    <div class="card-body">
+                        <h5 class="card-title">MUSIC</h5>
+                        <p class="card-text">A workshop is embedded into a conference; it doesn’t take place on its own, but it takes place
+                            during the main
+                            conference.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-4">
+                <div class="card h-100">
+                    <img src="assets/img/dots-menu.png" class="card-img-top1" alt="dots-menu">
+                    <img src="assets/img/robot.png" class="card-img-top" alt="TECH AND ART SHOW">
+                    <div class="card-body">
+                        <h5 class="card-title">TECH AND ART SHOW</h5>
+                        <p class="card-text">A workshop is embedded into a conference; it doesn’t take place on its own, but it takes place
+                            during the main
+                            conference.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
 
     <!-- Automation -->
     <section> Automation goes here</section>
@@ -25,5 +99,10 @@
 
     <!--Footer-->
     <section> Footer goes here</section>
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
