--- a/index.html
+++ b/index.html
@@ -50,10 +50,41 @@
     <section> </section>
 
     <!-- Call for Exhibition -->
-    <section> </section>
+    <section> 
+        <div class="exhibition">
+            <div class="exhibit">
+                <span class="call">CALL FOR EXHIBITORS</span>
+                <div>
+                    <button>
+                        <span>YES, I AM IN</span>
+                    </button>
+                </div>
+            </div> 
+            <div class="subscribe">
+                <img src="./assets/images/mail.png" class="mail">
+                <div class="sub_text">
+                    <span class="sub">Subscribe to our Newsletter</span>
+                </div>
+                <p>Receive the latest news, products and promotions straight in your inbox!</p>
+                <input type="email" name="email" placeholder="Your email address">
+            </div>
+        </div>
+    </section>
 
     <!--Footer-->
-    <section></section>
+    <section>
+        <div class="footer">
+            <img src="./assets/images/AI image.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget 
+                nullam pellentesque aliquam curabitur cociis.
+            </p>
+            <div class="icon">
+                <img src="./assets/images/twitter.png" alt="twitter">
+                <img src="./assets/images/facebook.png" alt="twitter">
+                <img src="./assets/images/instagram.png" alt="twitter">
+            </div>
+        </div>
+    </section>
 </body>
 <script src="script.js"></script>
 </html>
