--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>AI Festival</title>
 </head>
 <body>
@@ -84,9 +85,9 @@
                 nullam pellentesque aliquam curabitur cociis.
             </p>
             <div class="icon">
-                <img src="./assets/images/twitter.png" alt="twitter">
-                <img src="./assets/images/facebook.png" alt="twitter">
-                <img src="./assets/images/instagram.png" alt="twitter">
+                <a href="https://twitter.com/Nigeriaai" class="fa fa-twitter"></a>
+                <a href="https://facebook.com/aifestivalnigeria" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram"></a>
             </div>
         </div>
     </section>
