--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="https://facebook.com/aifestivalnigeria">
                     <img src="./assets/images/f.svg">
                 </a>
-                <a href="mailto:aifestivalng@gmail.com"></a>
+                <a href="mailto:aifestivalng@gmail.com">
                 <button id="get-in-touch">GET IN TOUCH</button>
                 </a>
             </div>
