--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
                 <a href="https://twitter.com/Nigeriaai"> 
                     <img src="./assets/images/t.svg">
                 </a>
+                
                 <a href="https://facebook.com/aifestivalnigeria">
                     <img src="./assets/images/f.svg">
                 </a>
-                <a href="mailto:aifestivalng@gmail.com">
+                
+                <a href="mailto:aifestivalng@gmail.com?cc=borisphilosophy@gmail.com&">
                 <button id="get-in-touch">GET IN TOUCH</button>
                 </a>
             </div>
