--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <img src="./assets/images/f.svg">
                 </a>
                 
-                <a href="mailto:aifestivalng@gmail.com?cc=borisphilosophy@gmail.com&">
+                <a href="mailto:aifestivalng@gmail.com?cc=borisphilosophy@gmail.com">
                 <button id="get-in-touch">GET IN TOUCH</button>
                 </a>
             </div>
@@ -72,9 +72,7 @@
                     <img src="assets/img/speech.png" class="card-img-top" alt="TALKS AND WORKSHOP">
                     <div class="card-body">
                         <h5 class="card-title">TALKS AND WORKSHOP</h5>
-                        <p class="card-text">A workshop is embedded into a conference; it doesn’t take place on its own, but it takes place
-                            during the main
-                            conference.</p>
+                        <p class="card-text">Learn from the smartest and most influential expert on the impact of AI. This workshop will include Data Analyst, Data Scientist, Business Intelligence Anaylst, Machine Learning, IoT, Robotics, AR and VR</p>
                     </div>
                 </div>
             </div>
