--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
                     <img src="assets/img/domra.png" class="card-img-top" alt="MUSIC">
                     <div class="card-body">
                         <h5 class="card-title">MUSIC</h5>
-                        <p class="card-text">A workshop is embedded into a conference; it doesn’t take place on its own, but it takes place
-                            during the main
-                            conference.</p>
+                        <p class="card-text">Good music heals the soul, We will feature a lot of good music from artist like Johnny Drille etc, and of course, there will be a party where you can bond with your next investor/partner/customer over a beer and a dance-off</p>
                     </div>
                 </div>
             </div>
@@ -95,9 +93,9 @@
                     <img src="assets/img/robot.png" class="card-img-top" alt="TECH AND ART SHOW">
                     <div class="card-body">
                         <h5 class="card-title">TECH AND ART SHOW</h5>
-                        <p class="card-text">A workshop is embedded into a conference; it doesn’t take place on its own, but it takes place
-                            during the main
-                            conference.</p>
+                        <p class="card-text">This will include both cultural and Technology art.
+As for technology art, we will have a side fire view of various technologies which includes: Ar, Vr, Mr, Robotics(From Reach Robotics and other robotics academy) etc
+</p>
                     </div>
                 </div>
             </div>
