--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@ As for technology art, we will have a side fire view of various technologies whi
     <section>
         <div class="footer">
             <img src="./assets/images/AI image.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget 
-                nullam pellentesque aliquam curabitur cociis.
+            <p>Data Driven Generation
             </p>
             <div class="icon">
                 <a href="https://twitter.com/Nigeriaai" class="fa fa-twitter"></a>
