New design in progress

--- a/index.html
+++ b/index.html
@@ -108,26 +108,92 @@
            </div>
        </div>
     </section>
+
+     <!-- Display -->
+    <section>
+        <div class="display">
+            <div class="row">
+                <div class="col-md-8">
+                    <img src="./assets/images/AI.svg" alt="Artificial Intelligence">
+                </div>
+                <div class="col-md-4">
+                    <p>Automation is no longer just a problem for those working in manufacturing. Physical labor was replaced by robots; mental labor is going to be replaced by AI and software.
+                       <p>Andrew Yang</p>
+                    </p>
+                </div>
+            </div>
+    
+            <div class="row">
+                <div class="col-md-8">
+                    <p>
+                        This will include both cultural and Technology art.
+                        As for technology art, we will have a side fire view of various technologies which includes: Ar, Vr, Mr, Robotics(From Reach Robotics and other robotics academy) and Internet of a thing devices. 
+                        <p> -Jeff Bezos </p>                          
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img src="./assets/images/h.svg" alt="Her">
+                </div>
+            </div>
+        </div>
+    </section>
+
      <!-- Call for Exhibition -->
      <section> 
         <div class="exhibition">
             <div class="row">
-                    <div class="subscribe col-md-4">
-                        <img src="./assets/images/mail.png" class="mail">
-                        <div class="sub_text">
-                            <span class="sub">Subscribe to our Newsletter</span>
-                        </div>
-                        <p>Receive the latest news, products and promotions straight in your inbox!</p>
-                        <input type="email" name="email" placeholder="Your email address">
+                <div class="subscribe col-md-4">
+                    <img src="./assets/images/mail.png" class="mail">
+                    <div class="sub_text">
+                        <span class="sub">Subscribe to our Newsletter</span>
                     </div>
-                    <div class="exhibit col-md-8">
-                        <span class="call">CALL FOR EXHIBITORS</span>
-                        <div>
-                            <button>
-                                <span>YES, I AM IN</span>
-                            </button>
-                        </div>
-                    </div> 
+                    <p>Receive the latest news, products and promotions straight in your inbox!</p>
+                    <input type="email" name="email" placeholder="Your email address">
+                    <button class="blue">
+                        <span>Subscribe</span>
+                    </button>
+                </div>
+                <div class="exhibit col-md-8 blue">
+                    <span class="call">CALL FOR EXHIBITORS</span>
+                    <div>
+                        <p>Join the rail and show case your new product, solution and program.</p>
+                        <button class="white">
+                            <span>YES, I AM IN</span>
+                        </button>
+                    </div>
+                </div> 
+            </div>
+            <div class="row">
+                <div class="subscribe col-md-4 blue">
+                    <div class="volunteers">
+                        <span class="call">CALL FOR VOLUNTEERS</span>
+                        <p>Join us to make this event a sucess</p>
+                        <button class="white">
+                            <span>YES, I AM IN</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="exhibit col-md-8 white">
+                    <span class="call">CALL FOR EXHIBITORS</span>
+                    <div>
+                        <p>Join the rail and show Nigeria your awesome project</p>
+                        <button class="blue">
+                            <span>YES, I AM IN</span>
+                        </button>
+                    </div>
+                </div> 
+            </div>
+            
+            <!-- Call for volunteers and paper -->
+            <div class="row blue date">
+                <div class="col-md-6">
+                    <p>Save the Date</p>
+                </div>
+                <div class="col-md-6">
+                    <button class="white">
+                        <span>GOOGLE CALENDER</span>
+                    </button>
+                </div>
             </div>
         </div>
     </section>
