button design adapted, font adjusted and navbar hover modified

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/index.css">
     
     <title>AI Festival</title>
@@ -150,7 +150,7 @@
                     <p>Receive the latest news, products and promotions straight in your inbox!</p>
                     <input type="email" name="email" placeholder="Your email address">
                     <button class="blue">
-                        <span>Subscribe</span>
+                        <span>Subscribe <i class="fa fa-arrow-right"></i> </span>
                     </button>
                 </div>
                 <div class="exhibit col-md-8 blue">
@@ -158,7 +158,7 @@
                     <div>
                         <p>Join the rail and show case your new product, solution and program.</p>
                         <button class="white">
-                            <span>YES, I AM IN</span>
+                            <span>YES, I AM IN <i class="fa fa-arrow-right"></i></span>
                         </button>
                     </div>
                 </div> 
@@ -169,7 +169,7 @@
                         <span class="call">CALL FOR VOLUNTEERS</span>
                         <p>Join us to make this event a sucess</p>
                         <button class="white">
-                            <span>YES, I AM IN</span>
+                            <span>YES, I AM IN <i class="fa fa-arrow-right"></i></span>
                         </button>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                     <div>
                         <p>Join the rail and show Nigeria your awesome project</p>
                         <button class="blue">
-                            <span>YES, I AM IN</span>
+                            <span>YES, I AM IN <i class="fa fa-arrow-right"></i></span>
                         </button>
                     </div>
                 </div> 
@@ -191,7 +191,7 @@
                 </div>
                 <div class="col-md-6">
                     <button class="white">
-                        <span>GOOGLE CALENDER</span>
+                        <span>GOOGLE CALENDER <i class="fa fa-arrow-right"></i></span>
                     </button>
                 </div>
             </div>
