--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 <body>
      <!--Navbar-->
      <section>
-        <div class="container">
+        <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light" >
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navlink" aria-controls="navlink" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
               
                 <div class="collapse navbar-collapse" id="navlink">
-                  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                  <!-- <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li><a class="active" href="#home">Home</a></li>
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Blog</a></li>
-                  </ul>
-                  <div id="iconImage">
+                  </ul> -->
+                <div class="iconImage mr-auto mt-2 mt-lg-0">
                     <img src="./assets/images/AI image.jpg" alt="logo">
                 </div>
-                <div id="subscribeIcon">
+                <div class="subscribeIcon">
                     <a href="https://twitter.com/Nigeriaai"> 
                         <img src="./assets/images/t.svg">
                     </a>
