Intro background modified

--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
     <section>
         <div id="main">
             <div id="sub-main">
-                <div id="sub-main-details">
-                    <div>The Largest AI</div>
-                    <div>conference in</div>
-                    <div>Nigeria</div>
-                    <div id="sub-main-details-small">April 16-18, 2020</div>
+                <div id="sub">
+                    <div id="sub-main-details">
+                        <div>The Largest AI</div>
+                        <div>conference in</div>
+                        <div>Nigeria</div>
+                        <div id="sub-main-details-small">April 16-18, 2020</div>
+                    </div>
                 </div>
             </div>
         </div>
