Fixed broken button and updated content

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="sub-main">
                 <div id="sub">
                     <div id="sub-main-details">
-                        <div>The Largest AI</div>
+                        <div>The Largest Ai</div>
                         <div>conference in</div>
                         <div>Nigeria</div>
                         <div id="sub-main-details-small">April 16-18, 2020</div>
@@ -77,9 +77,11 @@
                        <img src="assets/img/speech.png" class="card-img-top" alt="TALKS AND WORKSHOP">
                        <div class="card-body">
                            <h5 class="card-title">TALKS AND WORKSHOP</h5>
-                           <p class="card-text">A workshop is embedded into a conference; it doesn’t take place on its own, but it takes place
-                               during the main
-                               conference.</p>
+                           <p class="card-text">
+                            Learn from the smartest and most influential expert on the impact of AI. 
+                            This workshop will include Data Analyst, Data Scientist, 
+                            Business Intelligence Anaylst, Machine Learning, IoT, Robotics, AR and VR
+                           </p>
                        </div>
                    </div>
                </div>
@@ -90,9 +92,11 @@
                        <img src="assets/img/domra.png" class="card-img-top" alt="MUSIC">
                        <div class="card-body">
                            <h5 class="card-title">MUSIC</h5>
-                           <p class="card-text">A workshop is embedded into a conference; it doesn’t take place on its own, but it takes place
-                               during the main
-                               conference.</p>
+                           <p class="card-text">
+                            Good music heals the soul, We will feature a lot of good music from artist like Johnny Drille etc, 
+                            and of course, there will be a party where you can bond with your next investor/partner/customer 
+                            over a beer and a dance-off
+                           </p>
                        </div>
                    </div>
                </div>
@@ -102,9 +106,11 @@
                        <img src="assets/img/robot.png" class="card-img-top" alt="TECH AND ART SHOW">
                        <div class="card-body">
                            <h5 class="card-title">TECH AND ART SHOW</h5>
-                           <p class="card-text">A workshop is embedded into a conference; it doesn’t take place on its own, but it takes place
-                               during the main
-                               conference.</p>
+                           <p class="card-text">
+                            This will include both cultural and Technology art.
+                            As for technology art, we will have a side fire view of various technologies which includes: 
+                            Ar, Vr, Mr, Robotics(From Reach Robotics and other robotics academy) etc                            
+                           </p>
                        </div>
                    </div>
                </div>
@@ -159,7 +165,7 @@
                             <div class="response" id="mce-success-response" style="display:none"></div>
                         </div>
 
-                        <button class="blue" name="subscribe" id="mc-embedded-subscribe">
+                        <button class="blue" name="subscribe" >
                             <span>Subscribe <i class="fa fa-arrow-right"></i> </span>
                         </button>
                     </form>
@@ -185,7 +191,7 @@
                     </div>
                 </div>
                 <div class="exhibit col-md-8 white">
-                    <span class="call">CALL FOR EXHIBITORS</span>
+                    <span class="call">CALL FOR PAPER</span>
                     <div>
                         <p>Join the rail and show Nigeria your awesome project</p>
                         <button class="blue">
