--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" type="text/css">
     <link rel="stylesheet" href="assets/css/index.css">
     
-    <title>AI Festival</title>
+    <title>AI Festival 2020</title>
 </head>
 
 <body>
