--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
 		<meta property="og:site_name" content="https://www.facebook.com/#">
-		<meta property="og:see_also" content="https://twitter.com/#">
+		<meta property="og:see_also" content="https://twitter.com/Nigeriaai">
 		
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary_large_image">
@@ -78,12 +78,12 @@
 				<div class="row align-items-end">
 					<div class="col-12 col-lg-7 hero-text">
 
-						<h3 class="mb-2 text-white">Data-Driven Generation</h3>
+						<h3 class="mb-2 text-white">2021: Creators Build V1</h3>
 						<div class="title mt-0 mb-4 text-white">
 							ai festival 🇳🇬
 						</div>
 
-						<a href="#" class="btn btn-primary btn-lg">Register to attend</a>
+						<a href="https://youtube.com/playlist?list=PLIx2SSsyRcdLwFHWFomSDHND0eAXhFfIU" class="btn btn-primary btn-lg">View our past session</a>
 					</div>
 
 					<div class="col-12 col-lg-5 d-none d-md-block">
